compiler-core/src/go/tests/snapshots/gleam_core__go__tests__lists__long_list_literals.snap
---
source: compiler-core/src/go/tests/lists.rs
expression: "\nfn go() {\n  [\"111111111111111111111111111111111111111111111111111111111111111111111111\"]\n  [\"11111111111111111111111111111111111111111111\", \"1111111111111111111111111111111111111111111\"]\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  ["111111111111111111111111111111111111111111111111111111111111111111111111"]
  ["11111111111111111111111111111111111111111111", "1111111111111111111111111111111111111111111"]
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.List_t[gleam_P.String_t] {
  _ = gleam_P.ToList[gleam_P.String_t](
    "111111111111111111111111111111111111111111111111111111111111111111111111",
  )
  return gleam_P.ToList[gleam_P.String_t](
    "11111111111111111111111111111111111111111111",
    "1111111111111111111111111111111111111111111",
  )
}
